[project]
name = "agents-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.40",
    "dotenv>=0.9.9",
    "langchain>=0.3.23",
    "langchain-gemini>=0.1.1",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
